# haskell-first-principles

./: .gitignore  LICENSE  MyPrelude.hs  README.md  TAGS  ch1  ch2.hs  ch2_exercises.hs
ch10/: Exercises.hs
ch11/: Exercises.hs  VignereCipher.hs
ch12/: Exercises.hs
ch13/: Ciphers.hs  Exercises.hs
ch13/hangman/: hangman.cabal
ch13/hangman/src/: Main.hs
ch13/hello/: hello.cabal
ch13/hello/exe/: Main.hs
ch13/hello/src/: DogsRule.hs  Hello.hs
ch14/: Ciphers.hs
ch14/exercises/: exercises.cabal
ch14/exercises/src/: Ciphers.hs  Main.hs
ch14/hangman/: hangman.cabal
ch14/morse/: morse.cabal
ch14/testing/: addition.cabal
ch14/wordNumberTest/: wordNumberTest.cabal
ch14/wordNumberTest/src/: WordNumber.hs
ch14/wordNumberTest/tests/: WordNumberTest.hs
ch15/: Exercises.hs
ch15/exercises/: exercises.cabal
ch15/orphan-instance/: Listy.hi  Listy.hs  ListyInstances.hi  ListyInstances.hs
ch16/: ReplaceExperiment.hs
ch17/exercises/: exercises.cabal
ch18/: Exercises.hs
ch18/exercises/: exercises.cabal
ch19/: Exercises.hs
ch19/shawty/: shawty.cabal
ch2/: TAGS  code.hs  exercises.hs
ch20/: Exercises.hs
ch21/exercises/: exercises.cabal
ch21/http/: http.cabal
ch23/exercises/: exercises.cabal
ch24/exercises/: exercises.cabal
ch26/exercises/: exercises.cabal
ch3/: ImportTopOrLocal.hs  TAGS  TopOrLocal.hs  exercises.hs  print1.hs  print2.hs  print3.hs  print3flipped.hi  print3flipped.hs  topOrLocal.hs
ch5/: Exercises.hs
ch6/: Exercises.hs
ch7/: Exercises.hs
ch8/: Exercises.hs
ch9/: CaesarCipher.hs  Exercises.hs
(+25 files in other folders)
