name:                wordNumberTest
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/wordNumberTest#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable wordNumberTest
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , hspec
  ghc-options:         -Wall -fwarn-tabs

test-suite tests
  ghc-options:       -Wall -fno-warn-orphans
  type:              exitcode-stdio-1.0
  main-is:   WordNumberTest.hs
  build-depends:     base >=4.7 && < 5
                     , hspec
                     , wordNumberTest
  hs-source-dirs:    tests
  default-language:  Haskell2010

library
  hs-source-dirs:    src
  exposed-modules:  WordNumber
  build-depends:  base >= 4.7 && < 5
  default-language: Haskell2010


